# UzbekSpeechToText

./: README.md  app.py  app_main.py  pyproject.toml  requirements.txt  setup.py  template.py
notebooks/: trial.py  trials.ipynb
src/UzbekSpeechToText/logger/: __init__.py
src/UzbekSpeechToText/utils/: main_utils.py
